Platform 2.19

* HttpClient

  We have deprecated @com.proofpoint.discovery.client.ServiceType in favor of
  @com.proofpoint.http.client.ServiceType.

* Deprecation removals

  We removed the following deprecated APIs:

  - AnnotatedBindingBuilder constructor
  - PrefixBindingBuilder constructor
  - ConfigBindingBuilder constructor
  - ConfigurationProvider
  - HttpClientModule
  - http.client.Request constructors
  - RuntimeIOException
  - JettyHttpClient.getIoPoolStats()
  - JettyIoPoolConfig
  - ClientInfoUtils.clientAddressFor()
  - HttpServer constructors
  - HttpServerProvider, TestingHttpServer, and TestingAdminHttpServer
    constructors without a ClientAddressExtractor parameter
  - RequestStats.record(String, int, long, long, Duration, Duration)
  - TestingNodeModule constructors taking Guava Optional
  - http-client.max-threads configuration option
  - http-client.min-threads configuration option
  - http-client.timeout-concurrency configuration option
  - http-client.timeout-threads configuration option

* Library Upgrades
  - Jetty to 9.4.24 (was 9.4.21)

Platform 2.18

* Library Upgrades

  - Base Docker image to proofpoint/platform-zulu-11:1.4
    based on 11.0.5 (was proofpoint/platform-zulu-11:1.3)

Platform 2.17

* Audit Logging

  - The default value for "audit.log.path" has changed to "var/log/audit.log".
    This config option is no longer overridden by the launcher. To disable
    audit logging, for example when running in-IDE, use the new config option
    "audit.log.enable".

Platform 2.16

* Library Upgrades

  - Jackson to 2.10.0 (was 2.9.10) (fixes deserialization vulnerabilities
    when using @JsonTypeInfo or "default typing")

Platform 2.14

* Reporting

  We added a "reporting.pulse.include-host-tag" config option (default "true")
  which can be set to "false" in order to omit the "host" tag from metrics
  reported to Pulse.

* Library Upgrades

  - Jetty to 9.4.21 (was 9.4.20) (various HTTP/2 denial-of-service fixes)

Platform 2.13
